--- a/app/assets/stylesheets/problems.scss
+++ b/app/assets/stylesheets/problems.scss
@@ -1,58 +1,12 @@
 // Place all the styles related to the Problems controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.post-container {
-  font-size: 150%;
-}
-
+@import 'theme.scss';
 
 .problem-title {
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-  padding-left: 4vh;
-}
-
-/* Style the tab */
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-}
-
-/* Style the buttons that are used to open the tab content */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-  padding-left: 2vh;
-  padding-top: 2vh;
-}
-
-.tabcontent {
-  animation: fadeEffect 1s; /* Fading effect takes 1 second */
+  padding: 1vh 5vw 1vh 2vw;
+  text-transform: none;
+  font-weight: 700;
 }
 
 .my-problems {
@@ -73,8 +27,117 @@
   }
 }
 
-/* Go from zero to full opacity */
-@keyframes fadeEffect {
-  from {opacity: 0;}
-  to {opacity: 1;}
+.problem-header {
+  display: flex;
+  align-items: center;
+}
+
+.problem-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-between;
+}
+
+.problem-info-row {
+  display: flex;
+}
+
+.follower-count {
+  display: flex;
+  align-items: center;
+  font-size: .6em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  height: 6vh;
+  width: 21vw
+}
+
+.follower-count-span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: .6em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 0 .4vw;
+  padding: 1vh;
+  background-color: #9b9b9b;
+  min-height: 4vh;
+  min-width: 4vh;
+  border-radius: 50%;
+  color: #fff;
+
+  &.success {
+    background-color: $success;
+  }
+
+  &.black {
+    background-color: #000;
+  }
+
+  &.info {
+    background-color: $info;
+  }
+}
+
+.post-container {
+  padding: 1vh 1vw;
+  border-radius: 2px;
+  border-bottom: 1px solid #fff;
+  background: #ccc;
+  transition: all .2s linear;
+  cursor: pointer;
+
+  &:hover {
+    background: #e2e2e2;
+  }
+
+  &:last-of-type {
+    border-bottom: none;
+  }
+
+  &:nth-of-type(even) {
+    background: #ddd;
+
+    &:hover {
+      background: #f1f1f1;
+    }
+  }
+}
+
+.post-author {
+  color: $primary;
+  margin: 0;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 2.2px;
+
+  & span {
+    color: #000;
+    font-weight: 300;
+  }
+}
+
+.post-title {
+  color: #000;
+  letter-spacing: 2px;
+  margin: 0;
+  font-style: italic;
+
+  &:hover {
+    color: #4b4b4b;
+  }
+}
+
+.post-link {
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.post-excerpt {
+  color: #000;
+  letter-spacing: 2px;
+  margin: 0;
 }
