--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,46 +1,30 @@
-<div class="jumbotron">
-  <h1 class="display-3">Welcome to <Strong>Just Be Human</Strong><sup class="landing-beta-tag">beta</sup></h1>
+<div class="jumbotron landing-page">
+  <h1 class="landing-lead">Welcome to <Strong>Just Be Human</Strong><sup class="landing-beta-tag">beta</sup></h1>
   <p class="lead">Thank you for checking out what we're building! Hopefully we can answer some of your questions here. </p>
   <hr class="my-4">
-  <p>
     <div class="landing-whatis-block">
       <div class="whatis-title">
         <li><Strong>What is Just Be Human?</Strong></li>
       </div>
       <div class="whatis-body">
-        Just Be Human is a platform for you to identify problems in your local community, connect with neighbors who want to help, and track progress over time as you work to solve real issues in your world.
+        <p>Just Be Human is a platform for you to identify problems in your local community, connect with neighbors who want to help, and track progress over time as you work to solve real issues in your world.<p>
       </div>
     </div>
-    <br>
-    <br>
     <div class="landing-how-block">
       <li><Strong>How does it work?</Strong></li>
-      <br>
-      A person identifies a problem in their community and creates a forum where people can discuss the issue, determine what resources are necessary to resolve it (time, skills, labor, equipment, etc), and then be connected with volunteers who are willing and able to provide those resources. 
-      <br>
-      <ul>
-        <li>
-          A user creates a <b>Problem</b> with a location and a desired completion date on the platform which is then broken down into individual tasks and responsibilities called <b>Milestones</b>.
-        </li>
-        <li>
-          Other users search by category or on a map of their local area to find Problems that they can follow, discuss, and volunteer for.
-        </li>
-        <li>
-          Volunteers for a Problem all know each other's roles and responsibilities and also know and agree on due dates, holding volunteers accountable to each other.
-        </li>
-        <li>
-          A Problem that has completed all of its Milestones is a real-world problem in your community that has been solved!
-        </li>
+      <p>A person identifies a problem in their community and creates a forum where people can discuss the issue, determine what resources are necessary to resolve it (time, skills, labor, equipment, etc), and then be connected with volunteers who are willing and able to provide those resources.</p>
+      <ul class="landing-list">
+        <li>A user creates a <b>Problem</b> with a location and a desired completion date on the platform which is then broken down into individual tasks and responsibilities called <b>Milestones</b>.</li>
+        <li>Other users search by category or on a map of their local area to find Problems that they can follow, discuss, and volunteer for.</li>
+        <li>Volunteers for a Problem all know each other's roles and responsibilities and also know and agree on due dates, holding volunteers accountable to each other.</li>
+        <li>A Problem that has completed all of its Milestones is a real-world problem in your community that has been solved!</li>
       </ul>
     </div>
-  </p>
-  <p class="lead">
+  <div class="d-flex justify-content-center">
     <a class="btn btn-danger btn-lg" href="/users/sign_in" role="button">Let's start volunteering!</a>
-  </p>
-</div>
+  </div>
 
-<div class="beta-disclaimer">
-  <p>
-    * You're going to run into some bugs, please forgive us! We're a small team and are working as hard as we can to build this thing for you.
-  </p>
+  <div class="beta-disclaimer">
+    <small>* You're going to run into some bugs, please forgive us! We're a small team and are working as hard as we can to build this thing for you.</small>
+  </div>
 </div>
