updated problem show page

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -24,7 +24,6 @@ p, a, span {
   font-family: 'Roboto', Arial, sans-serif;
 }
 
-
 .main {
   padding: 4vh 0;
 }
@@ -41,6 +40,14 @@ p, a, span {
 
 .alert {
   margin-bottom: 0;
+}
+
+.modal-dialog {
+  max-width: 60vw;
+}
+
+.modal-inner {
+  padding: 2vh 2vw 8vh 2vw;
 }
 
 .landing-beta-tag {
