--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Milestone</h1>
+<div class="main container modal-inner">
+  <h1>New Milestone</h1>
 
-<%= render 'form', milestone: @milestone %>
-
-<%= link_to 'Back', :back %>
+  <%= render 'form', milestone: @milestone %>
+</div>
