--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -33,8 +33,5 @@
     <%= f.hidden_field :user_id, :value => current_user.id %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+  <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
-
