--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="main container">
+<div class="main container modal-inner">
   <h1>New Post</h1>
   <%= render 'form', post: @post %>
 </div>
