--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -9,6 +9,7 @@
   <div class="form-inputs">
     <%= f.input :title, placeholder: "Keep your title short and simple!" %>
     <%= f.input :description, placeholder: "A good description will go a long way." %>
+
     <div class="form-group">
       <%= f.label :category %>
       <%= f.select :category, @categories.map.with_index {|cat, index| [cat, index] }, {}, class: "form-control" %>
@@ -17,12 +18,20 @@
       <%= f.label :subcategory %>
       <%= f.select :subcategory, @sub_categories[0].map.with_index {|sub, index| [sub[:title], index]}, {}, class: "form-control" %>
     </div>
+
+
     <%= f.input :volunteers_required %>
-    <%= f.input :estimated_work, placeholder: "Estimate the number of hours." %>
+    <%= f.input :recurring, default: false %>
+    <%= f.input :planned, default: false, label: "Is there any more planning that needs to be done?" %>
+    <%= f.input :estimated_work, placeholder: "Estimate the amount of work required from volunteers on a 1-10 scale" %>
+    <%= f.input :recurring, default: false %>
+    <div class="date-selection">
+      <%= f.label "How often do you want to do this?" %>
+      <%= f.select :recurring_time, @time_options %>
+    </div>
     <%= f.input :target_completion_date, as: :date, order: [:month, :day, :year] %>
     <%= f.input :address, placeholder: "If possible, please enter an address" %>
     <%= f.input :postal_code, placeholder: "A postcode is not necessary if an address is entered" %>
-    
   </div>
 
   <%= f.button :submit, class: 'btn btn-outline-primary'%>
