--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -63,7 +63,7 @@
           <h4 id="marker_title" class="marker_title"> ${data.title}</h4>
           <p id="marker_participants" class="marker_participants">Participant status: ${data.volunteer_count} / ${data.volunteers_required}</p>
           <p id="marker_followers" class="marker_followers">Followers: ${data.follower_count}</p>
-          <p id="marker_category" class="marker_category">Category: ${data.category_title} -- Subcategory: ${data.subcategory_title}</p>
+          <p id="marker_category" class="marker_category">Category: ${data.category_title}</p>
           <a href="/problems/${data.id}" id="marker_link" class="marker_link">See Problem Details</a>
          </div>`;
 
