--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,4 +31,4 @@
 
 <br>
 <br>
-<%= link_to 'Back to parent problem/milestone', @parent %>
+<%= link_to 'Back to parent problem/requirement', @parent %>
