--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -1,5 +1,5 @@
 <div class="main container">
-  <h1>Address a problem you want help tackling</h1>
+  <h1>Define your problem</h1>
   <%= render 'form', problem: @problem %>
 
   <br/>
