--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -14,10 +14,10 @@
       <li><Strong>How does it work?</Strong></li>
       <p>A person identifies a problem in their community and creates a forum where people can discuss the issue, determine what resources are necessary to resolve it (time, skills, labor, equipment, etc), and then be connected with volunteers who are willing and able to provide those resources.</p>
       <ul class="landing-list">
-        <li>A user creates a <b>Problem</b> with a location and a desired completion date on the platform which is then broken down into individual tasks and responsibilities called <b>Milestones</b>.</li>
+        <li>A user creates a <b>Problem</b> with a location and a desired completion date on the platform which is then broken down into individual tasks and responsibilities called <b>Requirements</b>.</li>
         <li>Other users search by category or on a map of their local area to find Problems that they can follow, discuss, and volunteer for.</li>
         <li>Volunteers for a Problem all know each other's roles and responsibilities and also know and agree on due dates, holding volunteers accountable to each other.</li>
-        <li>A Problem that has completed all of its Milestones is a real-world problem in your community that has been solved!</li>
+        <li>A Problem that has completed all of its Requirements is a real-world problem in your community that has been solved!</li>
       </ul>
     </div>
   <div class="d-flex justify-content-center">
