--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -17,7 +17,7 @@
   <div class="problem-info">
     <div class="problem-info-row">
       <span class="follower-count">Created By <span class="follower-count-span"><%= @problem.user.username %></span></span>
-      <span class="follower-count">Sub-Category <span class="follower-count-span black"><%= @problem.subcategory_title %></span></span>
+      
       <span class="follower-count">
         <%= link_to 'Followers', problems_followers_path(:id => @problem.id), data: { modal: true } %>
         <span class="follower-count-span info"><%= @problem.follower_count %></span>
@@ -38,8 +38,9 @@
 </div>
 
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'problem-info-tab')" id="defaultOpen">Posts</button>
-  <button class="tablinks" onclick="openTab(event, 'problem-milestones-tab')">Milestones and Progress</button>
+
+  <button class="tablinks" onclick="openTab(event, 'problem-requirements-tab')" id="defaultOpen">Requirements and Progress</button>
+  <button class="tablinks" onclick="openTab(event, 'problem-info-tab')">Posts and Discussion</button>
   <% if @is_admin %>
     <!-- <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Manage Volunteers and Followers</button> -->
   <% elsif @role %>
@@ -53,7 +54,7 @@
     <div class="tab-header d-flex align-items-center">
       <h2 class="tab-heading"> Posts </h2>
       <% if current_user && @role %>
-        <div class="add-milestone-button">
+        <div class="add-requirement-button">
           <%= link_to 'Add A Post', new_post_path(:problem => {:problem_id => @problem.id}), class: "btn btn-success btn-lg", data: { modal: true } %>
         </div>
       <% end %>
@@ -74,34 +75,34 @@
   </div>
 </div>
 
-<div id="problem-milestones-tab" class="tabcontent">
+<div id="problem-requirements-tab" class="tabcontent">
   <div class="d-flex align-items-center">
-    <h2 class="tab-heading">Milestones</h2>
+    <h2 class="tab-heading">Requirements</h2>
     <% if @is_mod %>
-      <div class="add-milestone-button">
-        <%= link_to 'Add a new milestone', new_milestone_path(:milestone => {:problem_id => @problem.id}), class: 'btn btn-success btn-lg', data: { modal: true } %>
+      <div class="add-requirement-button">
+        <%= link_to 'Add a new requirement', new_requirement_path(:requirement => {:problem_id => @problem.id}), class: 'btn btn-success btn-lg', data: { modal: true } %>
       </div>
     <% end %>
   </div>
 
-  <% @problem.milestones.each do |milestone| %>
-    <div class="milestone-container">
-      <div class="milestone-title">
-        <Strong>Title:</Strong> <%= milestone.title %><br>
+  <% @problem.requirements.each do |requirement| %>
+    <div class="requirement-container">
+      <div class="requirement-title">
+        <Strong>Title:</Strong> <%= requirement.title %><br>
       </div>
-      <div class="milestone-status">
-        <Strong>Current Status:</Strong> <%= milestone.current_status %><br>
+      <div class="requirement-status">
+        <Strong>Current Status:</Strong> <%= requirement.current_status %><br>
       </div>
-      <div class="milestone-info">
-        <Strong>Complete:</Strong> <%= milestone.complete %> <br>
-        <Strong>Current/Needed Volunteers:</Strong> <%= milestone.volunteer_count %>/<%= milestone.volunteers_required %> <br>
+      <div class="requirement-info">
+        <Strong>Complete:</Strong> <%= requirement.complete %> <br>
+        <Strong>Current/Needed Volunteers:</Strong> <%= requirement.volunteer_count %>/<%= requirement.volunteers_required %> <br>
       </div>
-      <div class="milestone-button-group">
+      <div class="requirement-button-group">
         <div class="btn-group" role="group" aria-label="Admin Controls">
-          <%= link_to 'Show', milestone %>
+          <%= link_to 'Show', requirement %>
           <% if @is_mod %>
-          <%= link_to 'Edit', edit_milestone_path(milestone), class: 'btn btn-outline-info my-2 my-sm-0', data: { modal: true } %>
-          <%= link_to 'Delete', milestone, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger my-2 my-sm-0' %>
+          <%= link_to 'Edit', edit_requirement_path(requirement), class: 'btn btn-outline-info my-2 my-sm-0', data: { modal: true } %>
+          <%= link_to 'Delete', requirement, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger my-2 my-sm-0' %>
           <% end %>
         </div>
       </div>
