--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -32,7 +32,7 @@
     </ul>
 
 
-    <% if current_user %>
+    <% if current_user && current_page?('/') %>
       <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
         <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a postal code" aria-label="Change Location" name="location_term">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="/" value="location_term">Change Location</button>
@@ -63,8 +63,7 @@
           <% end %>
         </ul>
 
-
-        <% if current_user %>
+        <% if current_user && current_page?('/')  %>
           <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
             <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a postal code" aria-label="Change Location" name="location_term">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="/" value="location_term">Change Location</button>
